Ported recipe datagen